# cef-unity

./: .gitignore  .lfsconfig  REFACTORING_REPORT.md
.claude/: settings.local.json
.github/workflows/: rust-build.yml
cef-unity-csharp/: Directory.Build.targets  cef-unity-csharp.slnx
cef-unity-csharp/Interop/: CefUnity.cs  CefUnity.targets  Interop.csproj  NativeMethods.g.cs  libcef_unity_rust.dylib
cef-unity-csharp/Sandbox/: Program.cs  (+1 more)
cef-unity-rust/: .gitignore  CLAUDE.md  Cargo.toml  build-server-sandbox.sh  build.rs  deploy.ps1  deploy.sh  test_alpha.html
cef-unity-rust/crates/client/: Cargo.toml  build.rs
cef-unity-rust/crates/client/src/: au_output.c  au_output.rs  audio_ring.rs  d3d11.rs  d3d12.rs  lib.rs  metal_texture.m  native_voice.rs  scroll_monitor.m  scroll_monitor.rs
cef-unity-rust/crates/helper/: Cargo.toml
cef-unity-rust/crates/helper/src/: main.rs
cef-unity-rust/crates/ipc/: Cargo.toml
cef-unity-rust/crates/ipc/src/: lib.rs
cef-unity-rust/crates/server/: Cargo.toml  build.rs
cef-unity-rust/crates/server/src/: d3d11_pool.rs  event_loop.rs  iosurface_pool.m  mach_iosurface.c  main.rs  server.rs
cef-unity-rust/crates/server/src/event_loop/: generic.rs  macos.rs  mod.rs
cef-unity-rust/crates/server/tests/: ime_caret_tracking.rs  ime_integration.rs  oversize_viewport.rs
cef-unity-rust/src/: cef_app_inject.m  ffi.rs  helper.rs  ipc.rs  lib.rs  main.rs  server.rs  server_main.rs
cef-unity-unityproject/: .gitignore
claude-memory/: MEMORY.md  audio-latency.md  cef-external-begin-frame.md  feedback_keigo.md  feedback_proper_fix.md  iosurface-gpu-copy.md  user_game_developer.md
(+172 files in other folders)
