[package]
name = "cef-unity-rust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "cef-unity-rust-helper"
path = "src/helper.rs"

[[bin]]
name = "cef-unity-server"
path = "src/server_main.rs"

[dependencies]
cef = "145.5.0"
ipc-channel = "0.21"
serde = { version = "1", features = ["derive"] }
shared_memory = "0.12"

[build-dependencies]
csbindgen = "1.9"
cc = "1"
