[package]
name = "cef-unity-client"
version = "0.1.0"
edition = "2024"

[lib]
name = "cef_unity_rust"
crate-type = ["cdylib"]

[dependencies]
cef-unity-ipc = { path = "../ipc" }
ipc-channel = "0.21"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
] }

[build-dependencies]
csbindgen = "1.9"
cc = "1"
