[package]
name = "cef-unity-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cef-unity-server"
path = "src/main.rs"

[dependencies]
cef-unity-ipc = { path = "../ipc" }
cef = "145.5.0"
ipc-channel = "0.21"
serde_json = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_Threading",
] }

[build-dependencies]
cc = "1"
